assets/header_upper: overwrite BS position for nav dropdown on small screens partial fix for #1161

--- a/adhocracy-plus/assets/scss/components/_header_upper.scss
+++ b/adhocracy-plus/assets/scss/components/_header_upper.scss
@@ -19,6 +19,11 @@
 
 .header-upper__nav {
     flex-direction: row;
+
+    //bootstrap overwrites
+    .dropdown-menu {
+        position: absolute;
+    }
 }
 
 .header-upper__mobile-toggle {
